# service/api/api-handler.go
@@ -19,6 +19,7 @@ func (rt *_router) Handler() http.Handler {
 	// Photos routes
 	rt.router.POST("/users/:userId/photos", rt.wrap(rt.uploadPhoto))
 	rt.router.DELETE("/users/:userId/photos/:photosId", rt.wrap(rt.deletePhoto))
+	rt.router.GET("/users/:userId/photos/:photosId", rt.wrap(rt.getPhoto))
 
 	// Likes routes
 	rt.router.POST("/users/:userId/photos/:photosId/likes", rt.wrap(rt.likePhoto))
@@ -30,7 +31,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/users/:userId/photos/:photosId/comments/:commentsId", rt.wrap(rt.uncommentPhoto))
 
 	// Follows routes
-	rt.router.GET("/users/:userId/follows", rt.wrap(rt.getUserfollows))
+	rt.router.GET("/users/:userId/follows", rt.wrap(rt.getUserFollows))
 	rt.router.GET("/users/:userId/followers", rt.wrap(rt.getUserFollowers))
 	rt.router.POST("/users/:userId/follows/:followedId", rt.wrap(rt.followUser))
 	rt.router.DELETE("/users/:userId/follows/:followedId", rt.wrap(rt.unfollowUser))
